// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prubas de GifExpertApp Debe mostrar el componente correctamente 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Prubas de GifExpertApp Debe mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GiftExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="1"
      key="1"
    />
    <GifGrid
      category="2"
      key="2"
    />
  </ol>
</Fragment>
`;
